removed temp file

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,7 @@
 04-data/
 02-literature/
 05-meetings/
+
 ~$GANTT Chart.xlsx
 ~$c_project_proposal_20022024.docx
+01-planning/~$Literature Matrix .xlsx
