--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@
 ~$GANTT Chart.xlsx
 ~$c_project_proposal_20022024.docx
 01-planning/~$Literature Matrix .xlsx
+
+/Users/joshuahellewell/Desktop/02-msc/01-modules/MSc Project - 771952/03-dev/Geometry.egg-info
+
+/Users/joshuahellewell/Desktop/02-msc/01-modules/MSc Project - 771952/03-dev/build
