--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 .DS_Store
-04-data/shapes/
+/Users/joshuahellewell/Desktop/02-msc/01-modules/MSc Project - 771952/04-data
 02-literature/
 05-meetings/
 
